--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@auth0/auth0-spa-js": "^1.12.1",
     "@date-io/core": "^1.3.13",
     "@date-io/date-fns": "^1.3.6",
-    "@mui/material": "latest",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/codemod": "^4.5.0",
-    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.2",
+    "@mui/material": "^5.0.6",
     "apexcharts": "^3.20.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
@@ -29,8 +31,9 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.19",
+    "moment": "^2.29.1",
     "mui-datatables": "^3.2.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "notistack": "^0.8.8",
     "prop-types": "^15.7.2",
     "qwest": "^4.5.0",
