Update ver Beta

--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "date-fns": "^2.15.0",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
+    "export-to-csv": "^0.2.1",
     "firebase": "^8.6.7",
     "formik": "^2.1.5",
     "globalize": "^0.1.1",
     "history": "^4.10.0",
+    "json-csv": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.19",
+    "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.1",
     "mui-datatables": "^3.2.0",
     "node-sass": "^6.0.1",
@@ -43,6 +46,7 @@
     "react-big-calendar": "^0.24.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^11.2.0",
+    "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
     "react-highlight": "^0.12.0",
     "react-html-parser": "^2.0.2",
@@ -60,7 +64,7 @@
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.14",
     "swiper": "^4.5.0",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.2",
     "victory": "^32.3.3",
     "yup": "^0.29.3"
   },
